Don't crash when network manager is not available

https://bugzilla.gnome.org/show_bug.cgi?id=659103

Signed-off-by: Ionut Biru <ibiru@archlinux.org>